--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,10 +2,6 @@
   width: 100%;
   height: 110rem;
 
-  /* position: absolute;
-  bottom: 0;
-  z-index: 10;*/
-
   display: flex;
   flex-direction: column;
   justify-content: center;
